@@ -24,8 +24,8 @@ package de.ibapl.jnhw.common.memory;
 import de.ibapl.jnhw.common.annotation.int8_t;
 import de.ibapl.jnhw.common.datatypes.BaseDataType;
 import java.io.IOException;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 
 /**
  *
@@ -36,8 +36,8 @@ public class Int8_t extends NativeIntNumber<Byte> {
 
     public final static BaseDataType DATA_TYPE = BaseDataType.int8_t;
 
-    public static Int8_t allocateNative(SegmentScope ms) {
-        return new Int8_t(MemorySegment.allocateNative(DATA_TYPE.SIZE_OF, DATA_TYPE.ALIGN_OF.alignof, ms), 0);
+    public static Int8_t allocateNative(Arena arena) {
+        return new Int8_t(arena.allocate(DATA_TYPE.SIZE_OF, DATA_TYPE.ALIGN_OF.alignof), 0);
     }
 
     public static Int8_t map(OpaqueMemory mem, long offset) {
