@@ -24,8 +24,8 @@ package de.ibapl.jnhw.common.memory;
 import de.ibapl.jnhw.common.annotation.uint16_t;
 import de.ibapl.jnhw.common.datatypes.BaseDataType;
 import java.io.IOException;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 
 /**
  *
@@ -36,8 +36,8 @@ public class Uint16_t extends NativeIntNumber {
 
     public final static BaseDataType DATA_TYPE = BaseDataType.uint16_t;
 
-    public static Uint16_t allocateNative(SegmentScope ms) {
-        return new Uint16_t(MemorySegment.allocateNative(DATA_TYPE.SIZE_OF, DATA_TYPE.ALIGN_OF.alignof, ms), 0);
+    public static Uint16_t allocateNative(Arena arena) {
+        return new Uint16_t(arena.allocate(DATA_TYPE.SIZE_OF, DATA_TYPE.ALIGN_OF.alignof), 0);
     }
 
     public Uint16_t(MemorySegment memorySegment, long offset) {
