@@ -23,8 +23,8 @@ package de.ibapl.jnhw.common.memory;
 
 import de.ibapl.jnhw.common.datatypes.BaseDataType;
 import java.io.IOException;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 
 /**
  * teh datatype unsigned long
@@ -35,8 +35,8 @@ public class Unsigned_Long extends NativeIntNumber {
 
     public final static BaseDataType DATA_TYPE = BaseDataType.C_unsigned_long;
 
-    public static Unsigned_Long allocateNative(SegmentScope ms) {
-        return new Unsigned_Long(MemorySegment.allocateNative(DATA_TYPE.SIZE_OF, DATA_TYPE.ALIGN_OF.alignof, ms), 0);
+    public static Unsigned_Long allocateNative(Arena arena) {
+        return new Unsigned_Long(arena.allocate(DATA_TYPE.SIZE_OF, DATA_TYPE.ALIGN_OF.alignof), 0);
     }
 
     public Unsigned_Long(MemorySegment memorySegment, long offset) {
