@@ -38,8 +38,8 @@ import de.ibapl.jnhw.common.util.IntDefine;
 import de.ibapl.jnhw.libloader.MultiarchTupelBuilder;
 import de.ibapl.jnhw.libloader.libraries.LibcLoader;
 import de.ibapl.jnhw.util.posix.PosixDataType;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 
 /**
  * Wrapper around the {@code <pthread.h>} header.
@@ -118,8 +118,8 @@ public class Sched {
             offsetof_Sched_ss_repl_period = -1;
         }
 
-        public final static Sched_param allocateNative(SegmentScope ms) {
-            return new Sched_param(MemorySegment.allocateNative(sizeof, alignof.alignof, ms), 0);
+        public final static Sched_param allocateNative(Arena arena) {
+            return new Sched_param(arena.allocate(sizeof, alignof.alignof), 0);
         }
 
         /**
