@@ -24,21 +24,21 @@ package de.ibapl.jnhw.util.posix.downcall.foreign;
 import de.ibapl.jnhw.common.downcall.foreign.JnhwMi__I___V;
 import de.ibapl.jnhw.posix.Pthread;
 import de.ibapl.jnhw.util.posix.downcall.JnhwMh_PthreadT___V;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 
 /**
  *
  * @author aploese
  */
-public class JnhwMi_PthreadTI___V extends JnhwMi__I___V implements JnhwMh_PthreadT___V.ExceptionErased.ExceptionErased {
+public class JnhwMi_PthreadTI___V extends JnhwMi__I___V implements JnhwMh_PthreadT___V.ExceptionErased {
 
     public JnhwMi_PthreadTI___V(MemorySegment methodAddress, String name) {
         super(methodAddress, name);
     }
 
     @Override
-    public Pthread.Pthread_t invoke_PthreadT___V(SegmentScope ms) {
-        return Pthread.Pthread_t.wrapUint32_t(invoke_uI___V(), ms);
+    public Pthread.Pthread_t invoke_PthreadT___V(Arena arena) {
+        return Pthread.Pthread_t.wrapUint32_t(invoke_uI___V(), arena);
     }
 }
