@@ -24,8 +24,8 @@ package de.ibapl.jnhw.util.posix.downcall.jni;
 import de.ibapl.jnhw.common.downcall.jni.JniMi__L___V;
 import de.ibapl.jnhw.posix.Pthread;
 import de.ibapl.jnhw.util.posix.downcall.JnhwMh_PthreadT___V;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 
 /**
  *
@@ -38,8 +38,8 @@ public class JniMi_PthreadTL___V extends JniMi__L___V implements JnhwMh_PthreadT
     }
 
     @Override
-    public Pthread.Pthread_t invoke_PthreadT___V(SegmentScope ms) {
-        return Pthread.Pthread_t.wrapUint64_t(invoke_uL___V(), ms);
+    public Pthread.Pthread_t invoke_PthreadT___V(Arena arena) {
+        return Pthread.Pthread_t.wrapUint64_t(invoke_uL___V(), arena);
     }
 
 }
